change data names in sla-item manday table change data names in sla-item travel table change data names in sla-item ticket table change data names in sla-item fix costs table align positions of table contents in cost center change cost center id and name in cost center table change ng-select rate field in sla-item-parameter-tables to input field for add and update cards

--- a/src/app/views/cost-center-parameter/cost-center-parameter.component.css
+++ b/src/app/views/cost-center-parameter/cost-center-parameter.component.css
@@ -13,21 +13,7 @@ button{
   padding: 16px 10px;
   width: inherit;
 }
-td {
-  text-align: center;
-  vertical-align: middle;
-}
-tr {
-  text-align: center;
-  vertical-align: middle;
-}
-th {
-  text-align: center;
-  vertical-align: middle !important;
-}
-table {
-  text-align: center;
-}
+
 .table tr.active td{
   background-color: #999999 ;
   color: black;
